--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </p>
             </section>
             <section id="contact" class="section">
+                <h1>Kontakt</h1>
                 <p>Wenn du mit mir in Kontakt treten möchtest, kannst du dies über meine E-mail tun.<br>
                 E-Mail an <a href="mailto:7peleon7@gmail.com" class="email">7peleon7@gmail.com</a></p>
             </section>
